# render-engine

./: Cargo.toml
src/: camera.rs  main.rs  point.rs  renderer.rs  texture.rs  uniforms.rs  vertex.rs  window.rs
src/objects/: bezier_curves.rs  helper_functions.rs  lines.rs  mod.rs  polygons.rs
src/shaders/: shader.fs  shader.vs
src/textures/: happy-tree.xcf
